fix: use `collect(toList())` instead of `toList()` in streams
Java 11 doesn't have the `toList()` method in the Stream class