@@ -1,6 +1,7 @@
 package eapli.base.persistence.impl.jpa;
 
 import java.util.Set;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import eapli.base.course.domain.Course;
@@ -17,7 +18,7 @@ public class JpaCourseRepository extends BaseJpaRepositoryBase<Course,Long,Integ
     public Iterable<Course> ofStates(Set<CourseState> states) {
         return StreamSupport.stream(findAll().spliterator(), false)
                             .filter((course) -> states.contains(course.state()))
-                            .toList();
+                            .collect(Collectors.toList());
     }
 
     // FIXME: find how to use JPQL query for this method
@@ -25,6 +26,6 @@ public class JpaCourseRepository extends BaseJpaRepositoryBase<Course,Long,Integ
     public Iterable<Course> ofState(CourseState state) {
         return StreamSupport.stream(findAll().spliterator(), false)
                             .filter((course) -> course.state() == state)
-                            .toList();
+                            .collect(Collectors.toList());
     }
 }
